--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "devDependencies": {
+    "@testing-library/dom": "^8.20.0",
     "jest": "^29.4.2",
     "jest-environment-jsdom": "^29.4.2"
   },
   "scripts": {
-    "test": "jest --coverage --noStackTrace --silent=false"
+    "test": "jest"
   }
 }
